# zipperlab

./: .gitignore  NOTICE.txt  README.md  SECURITY.md  manage.sh  zipperlab.sublime-project
.github/workflows/: imaging.yaml
docker/: Dockerfile  docker-compose.yaml  entrypoint.py  gunicorn.conf.py
src/jpl.labcas.zipper.data/: README.md  pyproject.toml
src/jpl.labcas.zipper.data/src/jpl/labcas/zipper/data/: __init__.py  _archiver.py  apps.py  middleware.py  models.py  tasks.py  urls.py  views.py
src/jpl.labcas.zipper.data/src/jpl/labcas/zipper/data/management/: __init__.py
src/jpl.labcas.zipper.data/src/jpl/labcas/zipper/data/migrations/: 0001_initial.py  0002_archiver_solr_url.py  0003_remove_archiver_solr_url.py  0004_archiver_max_zip_size.py  0005_alter_archiver_max_zip_size.py  0006_archiver_from_email_archiver_labcas_url.py
src/jpl.labcas.zipper.data/src/jpl/labcas/zipper/data/templates/jpl.labcas.zipper.data/: archiver.html
src/jpl.labcas.zipper.policy/: README.md  pyproject.toml
src/jpl.labcas.zipper.policy/src/jpl/labcas/zipper/policy/: __init__.py  apps.py  celery.py  urls.py  wagtail_hooks.py  wsgi.py
src/jpl.labcas.zipper.policy/src/jpl/labcas/zipper/policy/management/commands/: __init__.py  worker.py  zipperlab_bloom.py
src/jpl.labcas.zipper.policy/src/jpl/labcas/zipper/policy/settings/: __init__.py  base.py  dev.py  ops.py
support/: build-wheels.sh  deploy.sh  devrebuild.sh
